finalizao do exercicio

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <div class="containerImg" id="containerImg"></div>
         <div class="action-button" id="next">&raquo</div>
     </div>
+    <div id="lista">
+        <ul id="listaQuantidade">
+
+        </ul>
+    </div>
     <script src="slideShow.js"></script>
 </body>
 
